--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "repository": {
+    "url": "https://github.com/bettercodevivek/Portfolio-MakerBCV"
+  },
   "scripts": {
     "build": "rollup -c"
   },
